# ntex-rust-todo-diesel

./: .env  Cargo.toml  diesel.toml
migrations/2024-11-29-070030_create_todos/: up.sql
src/: errors.rs  main.rs  schema.rs
src/configs/: db.rs  mod.rs  server.rs
src/models/: mod.rs
src/routes/: mod.rs  todo.rs
