[package]
name = "todo-crud"
version = "0.1.0"
edition = "2021"

[dependencies]
ntex = { version = "2.0", features = ["async-std"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"

utoipa = "3.3.0"
utoipa-swagger-ui = "3.1.3"

env_logger = "0.8"
dotenv = "0.15"
log = "0.4"
futures = "0.3"
uuid = { version = "1", features = ["v4"] }

diesel = { version = "2.2.0", features = ["postgres", "r2d2"] }
r2d2 = "0.8"

chrono = "0.4.23"
chrono-tz = "0.8.1"